[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/shop_screen.gd" id="1"]

[node name="ShopScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.06, 0.04, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
custom_minimum_size = Vector2(1280, 0)
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TopBar" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="ShopTitle" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
text = "SHOP"
theme_override_font_sizes/font_size = 28

[node name="ShopGoldLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Gold: 0"
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)

[node name="BuyLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Buy Cards"
theme_override_font_sizes/font_size = 18

[node name="BuyContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 220)
theme_override_constants/separation = 12

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RemoveLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Remove a Card (select character):"
theme_override_font_sizes/font_size = 18

[node name="RemoveTabs" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="RemoveScroll" type="ScrollContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 220)
vertical_scroll_mode = 0

[node name="RemoveContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/RemoveScroll"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 12

[node name="LeaveButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(180, 45)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "Leave Shop"
